# nak

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: exec.rs  machine.rs  main.rs  run.rs
contrib/: nak-plugin-vagrant-ssh  prefs.nak
frontend/: Cargo.toml
frontend/src/: comm.rs  edit.rs  main.rs  parse.rs  plan.rs  prefs.rs
frontend/tests/: integration.rs  parser.json  plan.json
protocol/: Cargo.toml
protocol/src/: comm.rs  lib.rs
src/: main.rs  parse.rs
tools/record/: Cargo.toml
tools/record/src/: main.rs
