cargo-features = ["edition"]

[package]
authors = ["Joshua Warner <joshw@dropbox.com>"]
name = "frontend"
version = "0.1.0"
edition = "2018"

[dependencies]
base64 = "0.9.2"
ctrlc = "*"
dirs = "*"
failure = "0.1.1"
libc = "0.2.42"
os_pipe = "0.6.1"
serde = "*"
serde_derive = "*"
serde_json = "*"
structopt = "0.2.10"
structopt-derive = "0.2.10"
tempfile = "*"

[dependencies.protocol]
path = "../protocol"

[dev-dependencies]
executable-path = "1.0.0"

[target]
[target."cfg(unix)"]
[target."cfg(unix)".dependencies]
liner = "0.4.4"
termion = "*"
