[package]
authors = ["Joshua Warner <joshuawarner32@gmail.com>"]
edition = "2018"
name = "record"
version = "0.1.0"

[dependencies]
bincode = "1.0.1"
byteorder = "1.2.7"
failure = "0.1.1"
nix = "*"
os_pipe = "0.6.1"
serde = "*"
serde_derive = "*"
structopt = "0.2.10"
structopt-derive = "0.2.10"
termion = "*"
vte = "0.3.3"
